syntax = "proto3";
package cosmoslottery.lottery;

option go_package = "cosmos-lottery/x/lottery/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto";
import "cosmoslottery/lottery/lottery_transaction.proto";

message Lottery {
  string index = 1; 
  cosmos.base.v1beta1.Coin fee = 2 [(gogoproto.nullable) = false]; 
  cosmos.base.v1beta1.Coin pool = 3 [(gogoproto.nullable) = false]; 
  repeated LotteryTransaction lotteryTransactions = 4;
}

