syntax = "proto3";

package cosmoslottery.lottery;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmoslottery/lottery/params.proto";
import "cosmoslottery/lottery/active_lottery.proto";
import "cosmoslottery/lottery/lottery_transaction.proto";

option go_package = "cosmos-lottery/x/lottery/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos-lottery/lottery/params";
  
  }
  
  // Queries a ActiveLottery by index.
  rpc ActiveLottery (QueryGetActiveLotteryRequest) returns (QueryGetActiveLotteryResponse) {
    option (google.api.http).get = "/cosmos-lottery/lottery/active_lottery";
  
  }
  
  // Queries a list of LotteryTransaction items.
  rpc LotteryTransaction    (QueryGetLotteryTransactionRequest) returns (QueryGetLotteryTransactionResponse) {
    option (google.api.http).get = "/cosmos-lottery/lottery/lottery_transaction/{id}";
  
  }
  rpc LotteryTransactionAll (QueryAllLotteryTransactionRequest) returns (QueryAllLotteryTransactionResponse) {
    option (google.api.http).get = "/cosmos-lottery/lottery/lottery_transaction";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetActiveLotteryRequest {}

message QueryGetActiveLotteryResponse {
  ActiveLottery ActiveLottery = 1 [(gogoproto.nullable) = false];
}

message QueryGetLotteryTransactionRequest {
  uint64 id = 1;
}

message QueryGetLotteryTransactionResponse {
  LotteryTransaction LotteryTransaction = 1 [(gogoproto.nullable) = false];
}

message QueryAllLotteryTransactionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLotteryTransactionResponse {
  repeated LotteryTransaction                     LotteryTransaction = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination         = 2;
}

